--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
-<h1>hello world</h1>
+<!DOCTYPE html>
+xingke
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>test</title>
+    <script type="text/javascript">
+        function btn_click() {
+            var a = 1;
+            var b = "2";
+            var c = a + b;
 
-
-kkk
+            alert(c);
+        }
+    </script>
+</head>
+<body>
+    <h1>hello world</h1>
+    <input type="button" value="确定" onclick="btn_click()" />
+    <h2> </h2>
+</body>
+</html>
+// JavaScript Document
