--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </script>
 </head>
 <body>
+    <dir style = backgroud : "./back.jpg" > ddd</dir>
     <h1>hello world</h1>
     <input type="button" value="确定" onclick="btn_click()" />
     <h2> </h2>
