--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </script>
 </head>
 <body>
-    <a href = "a.html" > ddd</a>
+    <a href = "https://shenlan5581.github.io./a" > ddd</a>
     <h1>hello world</h1>
     <input type="button" value="确定" onclick="btn_click()" />
     <h2> </h2>
