--- a/index.html
+++ b/index.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
+<link href="https//shenlan5581.github.io.k.css" rel="stylesheet" type="text/css" />
+
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>test</title>
-    <script type="text/javascript">
-        function btn_click() {
-            var a = 1;
-            var b = "2";
-            var c = a + b;
-
-            alert(c);
-        }
-    </script>
+<title>K</title>   
 </head>
-<body>
-    <a href = "https://shenlan5581.github.io./a" > ddd</a>
-    <h1>hello world</h1>
-    <input type="button" value="确定" onclick="btn_click()" />
-    <h2> </h2>
+<body  > 
+ 
+    ss
 </body>
 </html>
-// JavaScript Document
+ 
