--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<link href="https//shenlan5581.github.io.k.css" rel="stylesheet" type="text/css" />
+<link href="https//shenlan5581.github.io./k.css" rel="stylesheet" type="text/css" />
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
