--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<link href="https://shenlan5581.github.io./k.css" rel="stylesheet" type="text/css" />
-
-<head>
+<head> 
+<html>
+<link href="k.css" rel="stylesheet" type="text/css" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>K</title>   
 </head>
-
-
+ 
 <body> 
-
-    <top id="top">   
-        <h1> 记录 </h1>
-
-
+    <h1></h1>
+    <top id = "top">   
+        日 志
     </top>
  
-    ss
+ 
+
+
+  
 </body>
 </html> 
  
