--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head> 
 <html>
-<link href="http://shenlan5581.github.io./k.css" rel="stylesheet" type="text/css" />
+<link href="https://shenlan5581.github.io./k.css" rel="stylesheet" type="text/css" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<script src="http://shenlan5581.github.io./k.js">
+<script src="https://shenlan5581.github.io./k.js">
 </script>
 <title>K</title>   
 </head>
