--- a/index.html
+++ b/index.html
@@ -18,10 +18,17 @@
 
 
       <div class="content" >
-          <div onclick="show('1')"> titlesss</div>  
+          <div onclick="show('1')"> C++ namespace</div>  
           <content  id = "1"> 
             <pre>
-           
+                    namespace k1   //命名空间1
+                    {
+                    template <class T,class Y>   //模板函数
+                    void c(T a,Y b)
+                    {
+                       std::cout << a <<b<<std::endl;
+                    }   
+  
            </pre>
           </content>
       </div> 
