--- a/index.html
+++ b/index.html
@@ -126,6 +126,13 @@
               }
          </pre>
         </content>
+      </div>  
+
+      <div class="content" >
+        <div onclick="show('3')">REST & RESTfuk</div>  
+        <content  id = "3"> 
+         <a href="https://www.zhihu.com/question/28557115">REST & RESTfuk</a>
+        </content>
       </div>      
       
  
