--- a/a.html
+++ b/a.html
@@ -1,11 +1,13 @@
-<h1>
-ffffffff:w
+<title>微服务 服务发现</title>
+<body>
+  <pre>
+      <blue>
+    服务注册中心是服务发现的核心。
+    它保存了各个可用服务实例的网络地址（IP Address和Port）。
+    服务注册中心必须要有高可用性和实时更新功能。
+      </blue>
+    <red>在使用客户端发现方式时，客户端通过查询服务注册中心，获取可用的服务的实际网络地址</red>
 
-
-
-
-
-
-
-
-</h1>
+  </pre>
+ 
+</body>
