--- a/a.html
+++ b/a.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html >
 <head>
-
+ <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
  <title>微服务 服务发现</title>
-
+ <link href="https://shenlan5581.github.io./k.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
+<body id = "a">
   <pre>
         <h3>服务发现</h3>
 
@@ -17,7 +17,7 @@
       </blue>
     <red class="red">在使用客户端发现方式时，客户端通过查询服务注册中心，获取可用的服务的实际网络地址</red>
 
-    <red>在使用服务端发现方式时，客户端向load balancer 发送请求。load balancer 查询服务注册中心找到可用的服务，然后转发请求到该服务上</red>
+    <red>在使用服务端发现方式时，客户端向负载均衡器发送请求。负载均衡器查询服务注册中心找到可用的服务，然后转发请求到该服务上</red>
 
   </pre>
  
