--- a/a.html
+++ b/a.html
@@ -17,7 +17,7 @@
       </blue>
     <red class="red">在使用客户端发现方式时，客户端通过查询服务注册中心，获取可用的服务的实际网络地址</red>
 
-    <red>在使用服务端发现方式时，客户端向负载均衡器发送请求。负载均衡器查询服务注册中心找到可用的服务，然后转发请求到该服务上</red>
+    <red class="red">在使用服务端发现方式时，客户端向负载均衡器发送请求。负载均衡器查询服务注册中心找到可用的服务，然后转发请求到该服务上</red>
 
   </pre>
  
