--- a/a.html
+++ b/a.html
@@ -8,16 +8,21 @@
 <body id = "a">
   <pre>
         <h2>服务发现</h2>
-
-
       <blue class = "blue">
+          
     服务注册中心是服务发现的核心。
     它保存了各个可用服务实例的网络地址（IP Address和Port）。
     服务注册中心必须要有高可用性和实时更新功能。
       </blue>
-    <red class="red">在使用客户端发现方式时，客户端通过查询服务注册中心，获取可用的服务的实际网络地址</red>
+    #在使用客户端发现方式时，客户端通过查询服务注册中心，获取可用的服务的实际网络地址 
+    <red class="red">缺点 需要每个客户端 实现一套服务发现功能 </red>
+    #在使用服务端发现方式时，客户端向负载均衡器发送请求。负载均衡器查询服务注册中心找到可用的服务，然后转发请求到该服务上 
+  
+    Self-Registration的方式注册，服务实例必须自己主动的到注册中心注册和注销
+    <red class="red"> 缺点也是比较明显的，使得各个服务和注册中心的耦合度比较高。服务的不同语言的客户端都得实现注册和注销的逻辑 </red>
+    使用Third-Party方式进行服务注册时，服务本身不必关心注册和注销功能。而是通过其他组件（service registrarhandles）来实现服务注册功能。
 
-    <red class="red">在使用服务端发现方式时，客户端向负载均衡器发送请求。负载均衡器查询服务注册中心找到可用的服务，然后转发请求到该服务上</red>
+
 
   </pre>
  
