--- a/a.html
+++ b/a.html
@@ -6,10 +6,11 @@
  <link href="https://shenlan5581.github.io./k.css" rel="stylesheet" type="text/css" />
 </head>
 <body id = "a">
+    <a href="https://www.jianshu.com/p/8d2cfa1fa633">微服务介绍</a>
   <pre>
         <h2>服务发现</h2>
       <blue class = "blue">
-          
+
     服务注册中心是服务发现的核心。
     它保存了各个可用服务实例的网络地址（IP Address和Port）。
     服务注册中心必须要有高可用性和实时更新功能。
@@ -21,10 +22,10 @@
     Self-Registration的方式注册，服务实例必须自己主动的到注册中心注册和注销
     <red class="red"> 缺点也是比较明显的，使得各个服务和注册中心的耦合度比较高。服务的不同语言的客户端都得实现注册和注销的逻辑 </red>
     使用Third-Party方式进行服务注册时，服务本身不必关心注册和注销功能。而是通过其他组件（service registrarhandles）来实现服务注册功能。
-
+    
 
 
   </pre>
- 
+   <img src="https://shenlan5581.github.io./a1.jpg"></img>
 </body>
 </html>
