--- a/a.html
+++ b/a.html
@@ -26,6 +26,6 @@
 
 
   </pre>
-   <img src="https://shenlan5581.github.io./a1.jpg"></img>
+   <img src="https://shenlan5581.github.io/a1.jpg"></img>
 </body>
 </html>
