--- a/a.html
+++ b/a.html
@@ -7,6 +7,7 @@
 </head>
 <body id = "a">
     <a href="https://www.jianshu.com/p/8d2cfa1fa633">微服务介绍</a>
+    <a href="https://www.cnblogs.com/softidea/p/7389225.html">微服务架构的核心要点和实现原理</a>
   <pre>
         <h2>服务发现</h2>
       <blue class = "blue">
@@ -22,10 +23,10 @@
     Self-Registration的方式注册，服务实例必须自己主动的到注册中心注册和注销
     <red class="red"> 缺点也是比较明显的，使得各个服务和注册中心的耦合度比较高。服务的不同语言的客户端都得实现注册和注销的逻辑 </red>
     使用Third-Party方式进行服务注册时，服务本身不必关心注册和注销功能。而是通过其他组件（service registrarhandles）来实现服务注册功能。
-    
-
+    <img src="https://shenlan5581.github.io./s.jpg"></img>
+ 
 
   </pre>
-   <img src="https://shenlan5581.github.io/a1.jpg"></img>
+  
 </body>
 </html>
