--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 
       <div class="content" >
       <a href="https://www.zhihu.com/question/28557115">REST & RESTfuk</a>
-      </br>
+      </div>
+      <div class="content" > 
       <a href="https://shenlan5581.github.io./linux_command.html">linux 常用命令</a> 
-    </div>      
+      </div>      
       
  
  
