--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     </top>
 
       <div class="content" >
-      <a href="https://www.zhihu.com/question/28557115">REST & RESTfuk</a>
+      <a href="https://www.zhihu.com/question/28557115">REST & RESTful</a>
       </div>
       <div class="content" > 
       <a href="https://shenlan5581.github.io./linux_command.html">linux 常用命令</a> 
+      </div>  
+      <div class="content" > 
+      <a href="https://shenlan5581.github.io./find.html">服务发现</a> 
       </div>      
       
  
