--- a/find.html
+++ b/find.html
@@ -3,7 +3,7 @@
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
  <title>微服务 服务发现</title>
- <link href="https://shenlan5581.github.io./a1.css" rel="stylesheet" type="text/css" />
+ <link href="https://shenlan5581.github.io./find.css" rel="stylesheet" type="text/css" />
 </head>
 <body id = "a">
     <a href="https://www.jianshu.com/p/8d2cfa1fa633">微服务介绍</a>
