--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
       </div>  
       <div class="content" > 
       <a href="https://shenlan5581.github.io./find.html">服务发现</a> 
-      </div>      
+      </div>   
+      <div class="content" > 
+      <a href="https://shenlan5581.github.io./mysql.html">mysql</a> 
+      </div>       
       
  
  
