--- a/mysql.html
+++ b/mysql.html
@@ -1,21 +1,32 @@
 
 
+<!DOCTYPE html>
+<html >
+<head>
+ <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+ <title>微服务 服务发现</title>
+ <link href="https://shenlan5581.github.io./find.css" rel="stylesheet" type="text/css" />
+</head>
+<body id = "a">
+ 
 <pre>
 
 启动   service mysql start
    (第一次使用） 
 sudo   mysql -uroot -p
-enter password:<null>
+enter password:< null >
 
-show databases;   //显示库
+<h5 class ="red" >show databases</h5>;   //显示库
 
-create database <name> 创建库
-drop database   <name> 删除库
-
-
+create database < name > 创建库
+drop database   < name > 删除库
 
 
-
+ 
 
 
 </pre>
+  
+</body>
+</html>
+ 
