--- a/class.html
+++ b/class.html
@@ -27,40 +27,7 @@
 </style>
 <body id = "a">
  <h1>mysql 命令</h1>
-<pre>
-
-<l2> 启动   service mysql start</l2>
-   (第一次使用） 
-   ==============================
-<r1>sudo</r1>   mysql -uroot -p
-      enter password:< null > 
-
-设置用户密码
-mysql> SET PASSWORD FOR ‘root’@’localhost’ = PASSWORD(‘newpass’);       
-
-
-
-
-
-
-
-   ==============================
-<b3>库</b3>
-<r2>show databases;</r2>    <l1> 显示库</l1>
-
-create database  <b1>name</b1> <l1> 创建库</l1>
-drop   database  <b1>name</b1> <l1> 删除库</l1>
-
-use  <b1>数据库名称</b1>       <l1> 切换库</l1>
-
-<b3>表</b3>  
-<r2>show tables; </r2>           <l1> 显示表</l1>
-create tabl
-
-
-
-</pre>
-  
+ <img src="https://shenlan5581.github.io./img/class.jpg></img>
 </body>
 </html>
  
