--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       </div>   
       <div class="content" > 
       <a href="https://shenlan5581.github.io./mysql.html">mysql</a> 
-      </div>       
+      </div>
+      <a href="https://shenlan5581.github.io./class.html">mysql</a> 
+      </div>           
       
  
  
