--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       </div>   
       <div class="content" > 
       <a href="https://shenlan5581.github.io./mysql.html">mysql</a> 
-      </div>
-      <a href="https://shenlan5581.github.io./class.html">mysql</a> 
+      <div class="content" >
+      <a href="https://shenlan5581.github.io./class.html">类关系</a> 
       </div>           
       
  
