--- a/class.html
+++ b/class.html
@@ -26,8 +26,8 @@
    
 </style>
 <body id = "a">
- <h1>mysql 命令</h1>
- <img src="https://shenlan5581.github.io./img/class.jpg></img>
+ <h1>类关系</h1>
+ <img src="https://shenlan5581.github.io./img/类关系.jpg></img>
 </body>
 </html>
  
