--- a/class.html
+++ b/class.html
@@ -27,7 +27,7 @@
 </style>
 <body id = "a">
  <h1>类关系</h1>
- <img src="https://shenlan5581.github.io./img/类关系.jpg></img>
+ <img src="https://shenlan5581.github.io./img/类关系.jpg>class</img>
 </body>
 </html>
  
