--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
       <div class="content" >
       <a href="https://shenlan5581.github.io./page/class.html">类关系</a> 
       </div>           
- 
+       <div class="content" >
+      <a href="https://shenlan5581.github.io./page/design.text">设计模式</a> 
+      </div>           
+
  
        
 </body>
