--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a href="https://shenlan5581.github.io./page/class.html">类关系</a> 
       </div>           
        <div class="content" >
-      <a href="https://shenlan5581.github.io./page/design.text">设计模式</a> 
+      <a href="https://shenlan5581.github.io./page/design.html">设计模式</a> 
       </div>           
 
  
