--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       </div>           
        <div class="content" >
       <a href="https://shenlan5581.github.io./page/design.html">设计模式</a> 
-      </div>           
+      </div>     
+       <div class="content" >
+      <a href="https://shenlan5581.github.io./learn/makefile.html">makefile</a> 
+      </div>            
 
  
        
