--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <a href="https://shenlan5581.github.io./page/design.html">设计模式</a> 
       </div>     
        <div class="content" >
-      <a href="https://shenlan5581.github.io./learn/makefile.html">makefile</a> 
+      <a href="https://shenlan5581.github.io./learn/make/makefile.html">makefile</a> 
       </div>            
 
  
