--- a/index.html
+++ b/index.html
@@ -63,15 +63,13 @@ main:main.o
 	echo "2222"
 # .cpp.o:  =====等价于====  %.o : %.cpp
  
-
-<h4>git</h4> 
- 
-git push origin 本地                ：创建远程分支
-git checkout -b 本地 origin/远程    : 从远程下载一个本地没有的分支
-git fetch origin 远程：本地
-git push origin :远程               ：删除远程分支
-git push origin  --delete 远程      ：删除远程分支
-
+<h4>git</h4>
+<hr>
+git push origin 本地                      ：创建远程分支 <br>
+git checkout -b 本地 origin/远程     : 从远程下载一个本地没有的分支 <br>
+git fetch origin 远程                      ：   本地<br>
+git push origin :远程                     ：删除远程分支<br>
+git push origin  --delete 远程         ：删除远程分支<br>
  
 </div>
  
