--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html> 
 <head> 
-<link href="https://shenlan5581.github.io./css_js/index.css" rel="stylesheet" type="text/css" /> 
+<link href="   ./css_js/index.css" rel="stylesheet" type="text/css" /> 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<script src="https://shenlan5581.github.io./css_js/index.js"></script>
- 
  
 <title>K</title>   
 </head>
@@ -15,7 +13,7 @@
     </top>
 <div id="left">
      <div id="info">
-       <img src="https://shenlan5581.github.io./img/i.jpeg">  </img>
+       <img src=" ./img/i.jpeg">  </img>
        <div>
          <h3>邢柯 </h3> 
          1986.3.19<br>
@@ -23,7 +21,7 @@
          22542812@qq.com<br><br>
        </div>
        <div id ="src">CONNECT WITH ME &nbsp<br>
-       <a href ="https://github.com/shenlan5581"><img src="https://shenlan5581.github.io./img/git.jpeg"></img></a>
+       <a href ="https://github.com/shenlan5581"><img src=" ./img/git.jpeg"></img></a>
        </div>
        </div>
     <div id="list">         
@@ -32,18 +30,18 @@
       <a href="https://www.zhihu.com/question/28557115">rest and restful</a>
       </div>
       <div class="content" > 
-      <a href="https://shenlan5581.github.io./page/find.html">Service </a> 
+      <a href=" ./page/find.html">Service </a> 
       </div>   
       <div class="content" >
       <a href="#class">class</a> 
       </div>           
        <div class="content" >
-      <a href="https://shenlan5581.github.io./page/design.html">Design Patterns</a> 
+      <a href=" ./page/design.html">Design Patterns</a> 
       </div>         
     </div>
  </div>
 <div id="middle">
-   <div class="title">C++ 关于右值引用  </div>
+   <div class="title" id ="s">C++ 关于右值引用  </div>
    <hr>
    <pre>
    个人浅见<br>
@@ -55,7 +53,7 @@
    个人认为拷贝构造和移动构造的最大区别在于 移动构造可以改变原有对象</blue>
    其实这就又扯上了深拷贝和浅拷贝的问题
    <blue>我更关心的是，右值如何减少了不必要的拷贝开支... ... </blue> </pre>
-   <code><pre> 
+   <code id= "x"><pre> 
     #include &ltiostream&gt
     #include &ltstring&gt
     using namespace std;
@@ -103,14 +101,12 @@ c++似乎势要抛弃裸指针
 
 <div id = "class" class="title">C++ 类关系</div>
 <hr> 
-<img src="https://shenlan5581.github.io./img/class.jpg" width ="1000px";></img>
-
-
  
 </div> <!--middle end -->
 <div id="clean"></div>   
     
 </body>
 <foot> </foot>
+<script src=" ./css_js/index.js"></script>
 </html> 
  
