--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head> 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <style>
-cont{text-align:center }
 
- 
+#cont{text-align:center}
+h1{ }
+body{background-image:url('./img/cat.jpeg') }
+
 </style>
 <title>K</title>   
 </head>
 <body>    
-	<cont>
+	<div id='cont'>
 		<h1> 黄姣</h1>
 		<h3>  情人节快乐 ~~ </h3>
-	</cont>
-
-    
+	</div>
 </body>
 <foot> </foot>
-<script src=" ./css_js/index.js"></script>
 </html> 
  
