--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html> 
 <head> 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<style>
-
-#cont{text-align:center}
-body{background-image:url('./img/cat.jpeg') }
-
-</style>
+<script type="text/javascript" src="./gitPage/index.js"></script>
+<link type="text/css" src="./gitPage/index.css"><link/>
 <title>K</title>   
 </head>
+
+
 <body>    
 	<div id='cont'>
+	kk	
 	</div>
 </body>
    <foot></foot>
