--- a/AR/nft/index.html
+++ b/AR/nft/index.html
@@ -39,7 +39,7 @@
             type='nft' url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
-                gltf-model='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf'
+                gltf-model='/AR/nft/trex/sceneb.glb'
                 scale="3 3 3"
                 position="10 10 -10"
                 >
