--- a/AR/location-based/always-face-user/index.html
+++ b/AR/location-based/always-face-user/index.html
@@ -15,7 +15,8 @@
 		embedded
 		arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
 
-        <a-text value="This will always face the user." look-at="[gps-camera]" scale="75 75 75"
+        <a-text value="¸ßÉÐ¿Æ¼¼" look-at="[gps-camera]" scale="70 70 70"
+                 position="0 0 0"
             gps-entity-place="latitude: your-latitude>; longitude: your-longitude;"></a-text>
         <a-camera gps-camera rotation-reader>
 		</a-camera>
