--- a/AR/location-based/always-face-user/index.html
+++ b/AR/location-based/always-face-user/index.html
@@ -15,17 +15,16 @@
 		embedded
 		arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
 
-        <a-text value="高尚科技" look-at="[gps-camera]" scale="70 70 70"
-            gps-entity-place="latitude: your-latitude>; longitude: your-longitude;">
-        </a-text>
+        <a-text value="高尚科技." look-at="[gps-camera]" scale="75 75 75"
+            gps-entity-place="latitude: your-latitude>; longitude: your-longitude;"></a-text>
         <a-camera gps-camera rotation-reader>
 		</a-camera>
         <a-entity
-            gltf-model='/AR/nft/trex/sceneb.glb'
-            scale="3 3 3"
-            position="10 10 -10"
+        gltf-model='/AR/nft/trex/sceneb.glb'
+        scale="3 3 3"
+        position="10 10 -10"
         >
-    </a-entity>
+         </a-entity>
 	</a-scene>
 </body>
 
