--- a/AR/location-based/always-face-user/index.html
+++ b/AR/location-based/always-face-user/index.html
@@ -15,14 +15,14 @@
 		embedded
 		arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
 
-        <a-text value="¸ßÉÐ¿Æ¼¼." look-at="[gps-camera]" scale="75 75 75"
+        <a-text value="this is test." look-at="[gps-camera]" scale="75 75 75"
             gps-entity-place="latitude: your-latitude>; longitude: your-longitude;"></a-text>
         <a-camera gps-camera rotation-reader>
 		</a-camera>
         <a-entity
         gltf-model='/AR/nft/trex/sceneb.glb'
-        scale="3 3 3"
-        position="10 10 -10"
+        scale="1 1 1"
+        position="200 0 -200"
         >
          </a-entity>
 	</a-scene>
