--- a/AR/location-based/avoid-shaking/index.html
+++ b/AR/location-based/avoid-shaking/index.html
@@ -6,7 +6,7 @@
     <title>GeoAR.js demo</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-    <script src='../../../build/aframe-ar-nft.js'></script>
+    <script src='/AR/aframe-ar-nft.js'></script>
 </head>
 
 <body style='margin: 0; overflow: hidden;'>
