--- a/AR/location-based/only-html/index.html
+++ b/AR/location-based/only-html/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>GeoAR.js demo</title>
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-    <script src='../../../build/aframe-ar-nft.js'></script>
-
+    <script src='/AR/aframe-ar-nft.js'></script>
 </head>
 
 <body style='margin: 0; overflow: hidden;'>
