--- a/AR/location-based/always-face-user/index.html
+++ b/AR/location-based/always-face-user/index.html
@@ -17,12 +17,18 @@
 
         <a-text value="this is test." look-at="[gps-camera]" scale="20 25 25"
             gps-entity-place="latitude: <your-latitude>; longitude: <your-longitude>"position="0 1 0" ></a-text>
-        <a-camera gps-camera rotation-reader>
+
+        <a-box gps-projected-entity-place='latitude: 51.0489; longitude: -0.7240' position='0 10 0' material='color: green' scale='10 10 10'></a-box>
+
+        <a-camera rotation-reader
+            gps-camera='simulateLatitude: 51.049; simulateLongitude: -0.723'>
 		</a-camera>
+
         <a-entity
-        gltf-model='/AR/nft/trex/sceneb.glb'
-      scale="0.9 0.9 0.9"
-        position="300 0 300"
+            gps-entity-place="latitude: <your-latitude>; longitude: <your-longitude>"
+            gltf-model='/AR/nft/trex/sceneb.glb'
+            scale="0.9 0.9 0.9"
+            position="300 0 300"
         >
          </a-entity>
 	</a-scene>
