--- a/AR/location-based/click-places/index.html
+++ b/AR/location-based/click-places/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>GeoAR.js demo</title>
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-    <script src='../../../build/aframe-ar-nft.js'></script>
+    <script src='/AR/build/aframe-ar-nft.js'></script>
 </head>
 
 <script>
