--- a/AR/location-based/show-arbitrary-distant-places/index.html
+++ b/AR/location-based/show-arbitrary-distant-places/index.html
@@ -13,7 +13,8 @@
 <body>
     <a-scene vr-mode-ui="enabled: false" renderer='antialias: true; alpha:true'
         arjs='videoTexture: true; sourceType: webcam; debugUIEnabled: false'>
-        <a-camera id='camera1' near="0.1" far="50000" fov="80"
+        <a-camera id='camera1' 
+        near="0.1" far="50000" fov="80"
             gps-camera='simulateLatitude: 51.049; simulateLongitude: -0.723'
             rotation-reader vertical-controls wasd-controls="acceleration: 1300">
         </a-camera>
