--- a/AR/location-based/always-face-user/index.html
+++ b/AR/location-based/always-face-user/index.html
@@ -24,8 +24,8 @@
         <a-entity
             gps-entity-place="latitude: <your-latitude>; longitude: <your-longitude>"
             gltf-model='/AR/nft/trex/sceneb.glb'
-            scale="0.5 0.5 0.5"
-            position="0 -10 10"
+            scale="0.2 0.2 0.2"
+            position="-10 -50 10""
         >
          </a-entity>
 	</a-scene>
