--- a/AR/location-based/always-face-user/index.html
+++ b/AR/location-based/always-face-user/index.html
@@ -14,18 +14,13 @@
         vr-mode-ui="enabled: false"
 		embedded
 		arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
-
-        <a-text value="this is test." look-at="[gps-camera]" scale="2 2 2"
-            gps-entity-place="latitude: <your-latitude>; longitude: <your-longitude>"position="0 -3 0" >
-        </a-text>
         <a-camera rotation-reader gps-camera>
 		</a-camera>
-
         <a-entity
             gps-entity-place="latitude: <your-latitude>; longitude: <your-longitude>"
             gltf-model='/AR/nft/trex/sceneb.glb'
             scale="0.2 0.2 0.2"
-            position="-10 -50 10""
+            position="-10 -50 10"
         >
          </a-entity>
 	</a-scene>
