--- a/AR/nft/index.html
+++ b/AR/nft/index.html
@@ -38,7 +38,7 @@
         <a-nft
             type='nft' url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
-            <a-entity
+            <a-entity onclick="t()"
                 gltf-model='/AR/nft/trex/sceneb.glb'
                 scale="3 3 3"
                 position="10 10 -10"
@@ -47,4 +47,10 @@
         </a-nft>
 		<a-entity camera></a-entity>
     </a-scene>
+    <script>
+      function t(){
+        alert("t")
+      }
+
+    </script>
 </body>
